remove Xib file

--- a/Module VIPER.xctemplate/TemplateInfo.plist
+++ b/Module VIPER.xctemplate/TemplateInfo.plist
@@ -54,7 +54,7 @@
 			<key>Type</key>
 			<string>checkbox</string>
 			<key>Default</key>
-			<string>false</string>
+			<string>true</string>
 			<key>NotPersisted</key>
 			<true/>
 		</dict>
